force-app/main/default/objects/Foster_Care_Application__c/Foster_Care_Application__c.object-meta.xml
<CustomObject>
    <label>Foster Care Application</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Foster Care Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>