force-app/main/default/objects/Foster_Care_Application__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foster Care</fullName>
                <default>true</default>
                <label>Foster Care</label>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>