force-app/main/default/objects/Foster_Care_Application__c/fields/Certification_Revocation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Certification_Revocation_Reason__c</fullName>
    <label>Certification Revocation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>