force-app/main/default/objects/Foster_Care_Application__c/fields/Child_Abuse_Registry_Check__c.field-meta.xml
<CustomField>
    <fullName>Child_Abuse_Registry_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Abuse Registry Check</label>
    <type>Checkbox</type>
</CustomField>