force-app/main/default/objects/Foster_Care_Application__c/fields/Criminal_Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Background_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criminal Background Check</label>
    <type>Checkbox</type>
</CustomField>