force-app/main/default/objects/Foster_Care_Application__c/fields/Currently_an_approved_foster__c.field-meta.xml
<CustomField>
    <fullName>Currently_an_approved_foster__c</fullName>
    <label>Currently an approved foster?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>