force-app/main/default/objects/Foster_Care_Application__c/fields/FBI_Fingerprint_Clearance__c.field-meta.xml
<CustomField>
    <fullName>FBI_Fingerprint_Clearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FBI Fingerprint Clearance</label>
    <type>Checkbox</type>
</CustomField>