force-app/main/default/objects/Foster_Care_Application__c/fields/Home_Study_Status__c.field-meta.xml
<CustomField>
    <fullName>Home_Study_Status__c</fullName>
    <label>Home Study Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>