force-app/main/default/objects/Foster_Care_Application__c/fields/Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Foster Care Applications</relationshipLabel>
    <relationshipName>Foster_Care_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>