force-app/main/default/objects/Foster_Care_Application__c/fields/Previously_Applied_to_Foster_or_Adopt_in__c.field-meta.xml
<CustomField>
    <fullName>Previously_Applied_to_Foster_or_Adopt_in__c</fullName>
    <label>Previously Applied to Foster or Adopt in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>