force-app/main/default/objects/Foster_Care_Application__c/fields/Were_you_accepted_or_denied__c.field-meta.xml
<CustomField>
    <fullName>Were_you_accepted_or_denied__c</fullName>
    <label>Were you accepted or denied?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>